<resources>
    <string name="app_name" translatable="false">YSYP</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="add_data" translatable="false">إضافة البيانات</string>
    <string name="add_stocking_warehouse" translatable="false">ترصيد المستودع</string>
    <string name="add_reportes" translatable="false"> تقارير الرصيد الأول  </string>
    <string name="reportes" translatable="false"> التقارير  </string>
    <string name="backup" translatable="false"> نسخةاحتياطية  </string>
    <string name="import_backup" translatable="false"> استيراد قاعدةالبيانات  </string>
    <string name="add_reportes_daily" translatable="false"> تقارير الحركات اليومية  </string>
    <string name="title_daily_movements" translatable="false">  الحركات اليومية</string>
    <string name="title_report_first_balance" translatable="false">  تقرير ترصيدالمستودع</string>
    <string name="title_report_daily_movements" translatable="false">  تقرير الحركات اليومية</string>
    <string name="title_all_fragments" translatable="false">  تكويد المستودع</string>
    <string name="title_report_category" translatable="false">  تقرير الأصناف</string>
    <string name="title_report_store" translatable="false">  تقرير المخازن</string>
    <string name="title_empty_daily_movements" translatable="false">  لا توجد بيانات ...</string>
    <string name="title_empty_view_daily_movements" translatable="false"> قم أولاً بإضافة الأصناف والمخازن والأذونات</string>
    <string name="title_empty_view_daily_movements1" translatable="false">حتى تتمكن من إضافة الحركات اليومية</string>
    <string name="title_empty_view_store" translatable="false">ابدأ بإضافة المخازن</string>
    <string name="title_empty_view_color">ابدأ بإضافة الألوان</string>
    <string name="title_empty_view_category" translatable="false">ابدأ بإضافة الأصناف </string>
    <string name="title_empty_view_stoke_wearehouse" translatable="false"> حتى تستطيع ترصيد المستودع  </string>
    <string name="add_category" translatable="false">إضافة الأصناف</string>
    <string name="add_store" translatable="false">إضافة المخازن</string>
    <string name="add_store_convert" translatable="false">إضافة المخازن المحولة</string>
    <string name="add_colors">إضافة الألوان</string>
    <string name="title_add_category" translatable="false">إضافة الأصناف</string>
    <string name="empty_view_title_text" translatable="false">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text" translatable="false">Get started by adding a Category</string>
    <string name="name_category">اسم الصنف </string>
    <string name="number_stoke">رقم الترصيد  </string>
    <string name="number">الكمية  </string>
    <string name="name_user">اسم المستخدم </string>
    <string name="natural_category">طبيعة الصنف</string>
    <string name="notes">Notes </string>
    <string name="add_category_titile" translatable="false">اضافة الصنف </string>
    <string name="edit_category_titile" translatable="false">تعديل الصنف </string>
    <string name="search" translatable="false">ابحث في </string>
    <string name="searchBy" translatable="false">ابحث بـ </string>
    <string name="BtAdd" translatable="false">Save</string>
    <string name="BTDelete" translatable="false">Delete</string>
    <string name="add_store_titile" translatable="false">إضافة مخزن</string>
    <string name="update_store_titile" translatable="false">تعديل مخزن</string>
    <string name="error_save_store" translatable="false">  لم يتم حفظ المخزن </string>
    <string name="save_store" translatable="false">  تم حفظ المخزن بنجاح </string>
    <string name="error_update_store" translatable="false">  لم يتم تعديل المخزن </string>
    <string name="update_store" translatable="false">  تم تعديل المخزن بنجاح </string>
    <string name="error_delete_store" translatable="false">  لم يتم حذف المخزن </string>
    <string name="delete_store" translatable="false">  تم حذف المخزن بنجاح </string>
    <string name="add_color_titile">Add Color</string>
    <string name="update_color_titile">Edit color</string>
    <string name="type_color"> اسم اللون</string>
    <string name="error_save_color"> does not save color </string>
    <string name="save_color"> Saved color </string>
    <string name="error_update_color"> Does not update color </string>
    <string name="update_color"> Updated color </string>
    <string name="error_delete_color"> does not delete a color </string>
    <string name="delete_color"> Delete color </string>
    <string name="first_balance" translatable="false">الرصيد الأول </string>
    <string name="error_first_balance" translatable="false">يجب اختيار الرصيد الأول </string>
    <string name="add_stoke_titile" translatable="false">إضافة ترصيد المستودع </string>
    <string name="update_stoke_titile" translatable="false"> تعديل ترصيد المستودع </string>
    <string name="error_empty_category" translatable="false"> اختر الصنف  </string>
    <string name="error_empty_store" translatable="false"> اختر المخزن </string>
    <string name="error_save_category" translatable="false">  لم يتم حفظ الصنف </string>
    <string name="save_category" translatable="false">  تم حفظ الصنف بنجاح </string>
    <string name="error_update_category" translatable="false">  لم يتم تعديل الصنف </string>
    <string name="update_category" translatable="false">  تم تعديل الصنف بنجاح </string>
    <string name="error_delete_category" translatable="false">  لم يتم حذف الصنف </string>
    <string name="delete_category" translatable="false">  تم حذف الصنف بنجاح </string>
    <string name="add_daily_movement_titile" translatable="false">إضافة الحركات اليومية</string>
    <string name="update_daily_movement_titile" translatable="false">تعديل الحركات اليومية</string>
    <string name="name_permission" translatable="false">نوع الإذن</string>
    <string name="incoming" translatable="false"> الوارد</string>
    <string name="all_store" translatable="false"> كل المخازن</string>
    <string name="select_type_store" translatable="false"> اسم المخزن</string>
    <string name="issued" translatable="false"> الصادر</string>
    <string name="convert_to" translatable="false"> محول إلى</string>
    <string name="current_Balance" translatable="false"> الرصيد الحالي</string>
    <string name="show_current_Balance" translatable="false"> إظهار الرصيد الحالي</string>
    <string name="error_empty_permission" translatable="false"> اختر الإذن</string>
    <string name="error_save_daily" translatable="false"> لم يتم حفظ الحركة</string>
    <string name="save_daily" translatable="false"> تم حفظ الحركة بنجاح </string>
    <string name="error_update_daily" translatable="false"> لم يتم تعديل الحركة</string>
    <string name="update_daily" translatable="false"> تم تعديل الحركة بنجاح </string>
    <string name="error_delete_daily" translatable="false"> لم يتم مسح الحركة</string>
    <string name="delete_daily" translatable="false"> تم مسح الحركة بنجاح </string>
    <string name="error_empty_text" translatable="false">لا يمكن ترك الحقل فارغ أو تكون قمته 0 </string>
    <string name="error_exist_name" translatable="false">تم تسجيل اسم المخزن من قبل </string>
    <string name="error_exist_color">That color is exist </string>
    <string name="error_exist_category" translatable="false">تم تسجيل اسم الصنف من قبل </string>
    <string name="this_store_used" translatable="false">هذا المخزن مستخدم ولا يمكن مسحه</string>
    <string name="this_store_not_updated" translatable="false">هذا المخزن مستخدم ولا يمكن تعديله</string>
    <string name="this_category_not_updated" translatable="false">هذا الصنف مستخدم ولا يمكن تعديله أوحذفه</string>
    <string name="this_movement_not_allow" translatable="false">هذه الحركة لا يمكن مسحها \n بسبب وجود حركات بعدها</string>
    <string name="this_permission_used" translatable="false">هذا الإذن مستخدم ولا يمكن مسحه</string>
    <string name="this_permission_not_updated" translatable="false">هذا الإذن مستخدم ولا يمكن تعديله</string>
    <string name="this_category_used" translatable="false">هذا الصنف مستخدم ولا يمكن مسحه</string>
    <string name="error_same_store" translatable="false">لا يمكن تحويل الصنف لنفس المخزن </string>
    <string name="error_convert_to" translatable="false">يجب اختيار المخزن المحول له الصنف</string>
    <string name="error_issued_balance" translatable="false">الرصيد الصادر أكبر من الرصيد المتاح</string>
    <string name="delete_dialog_msg" translatable="false">هل تريد مسح هذا الصنف ؟ </string>
    <string name="cancel" translatable="false">لا</string>
    <string name="editor_activity_title_new_category" translatable="false">إضافة صنف</string>
    <string name="editor_activity_title_edit_category" translatable="false">تعديل صنف</string>
    <string name="editor_insert_category_failed" translatable="false">خطأ في حفظ السنف </string>
    <string name="editor_insert_category_successful" translatable="false">تم حفظ الصنف بنجاح </string>
    <string name="editor_update_category_failed" translatable="false">خطأ في تعديل الصنف</string>
    <string name="editor_update_category_successful" translatable="false">تم تعديل الصنف بنجاح </string>
    <string name="editor_delete_Category_failed" translatable="false">خطأ في مسح الصنف </string>
    <string name="editor_delete_category_successful" translatable="false">تم مسح الصنف بنجاح </string>
    <string name="text_splash" >KEEP CLASSY</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard" translatable="false">Discard</string>
    <string name="keep_editing" translatable="false">Keep Editing</string>
    <string name="type_store" translatable="false"> المخزن</string>
    <string name="name_type_store" translatable="false"> اسم المخزن</string>
    <string name="data_store" translatable="false">اخر تعديل</string>
    <string name="m_store" translatable="false"> م</string>
    <string name="data_created" translatable="false"> تاريخ الإنشاء</string>
    <string name="add_jobs">Add Jobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_store">Empty Store</string>
    <string name="start_add_job">ابدأ بإضافة الوظائف</string>
    <string name="title_position">Position</string>
    <string name="job_id">Id job</string>
    <string name="last_edit">Last edit</string>
</resources>